--- a/2-struktura-strony-html.png/index.html
+++ b/2-struktura-strony-html.png/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <div id="header">
-        <span>Home</span>
-        <span>O mnie</span>
-        <span>Kontakt</span>
+        <div id="navbar">
+            <span>Home</span>
+            <span>O mnie</span>
+            <span>Kontakt</span>
+        </div>
     </div>
     <div id="section">
         <div id="container1">
@@ -21,7 +23,8 @@
         </div>
         <div id="container2">
             <h3>O mnie</h3>
-            <div class="subArticle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rem voluptatum earum ut, natus et eos. Reprehenderit excepturi totam deserunt.</div>
+            <div class="subArticle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rem voluptatum earum
+                ut, natus et eos. Reprehenderit excepturi totam deserunt.</div>
         </div>
         <div id="container3">
             <div id="kontakt">
@@ -31,7 +34,8 @@
             </div>
             <div id="linki">
                 <h4>Tu mnie znajdziesz</h4>
-                <div class="aboutMe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nesciunt nam vel expedita rerum doloribus error suscipit, veritatis at voluptatibus?
+                <div class="aboutMe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nesciunt nam vel
+                    expedita rerum doloribus error suscipit, veritatis at voluptatibus?
                     <br>Lorem, ipsumdolor.<a href="">Link</a></br>
                 </div>
             </div>
@@ -41,4 +45,5 @@
         <h4>Lorem ipsum dolor sit.</h4>
     </footer>
 </body>
+
 </html>
