--- a/2-struktura-strony-html.png/index.html
+++ b/2-struktura-strony-html.png/index.html
@@ -8,42 +8,42 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="header">
+    <navbar id="navbar">
         <div id="navbar">
             <span>Home</span>
             <span>O mnie</span>
             <span>Kontakt</span>
         </div>
-    </div>
-    <div id="section">
-        <div id="container1">
-            <aside></aside>
-            <h1>Główny tytuł strony</h1>
-            <div class="mainArticle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, voluptatum.</div>
+    </navbar>
+    <header id="header">
+        <aside></aside>
+        <h1>Główny tytuł strony</h1>
+        <div class="mainArticle"><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, voluptatum.</span>
         </div>
-        <div id="container2">
+    </header>
+    <section id="section">
+        <div id="article">
             <h3>O mnie</h3>
-            <div class="subArticle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rem voluptatum earum
-                ut, natus et eos. Reprehenderit excepturi totam deserunt.</div>
+            <div class="description"><span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rem voluptatum earum
+                ut, natus et eos. Reprehenderit excepturi totam deserunt.</span></div>
         </div>
-        <div id="container3">
-            <div id="kontakt">
+        <div id="article">
+            <div id="contact">
                 <h3>Kontakt</h3>
-                <div class="subArticle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quas. Quam porro
-                    tempora fuga deserunt id architecto vero autem eligendi.</div>
+                <div class="description"><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quas. Quam porro
+                    tempora fuga deserunt id architecto vero autem eligendi.</span></div>
             </div>
-            <div id="linki">
+            <div id="article">
                 <h4>Tu mnie znajdziesz</h4>
-                <div class="aboutMe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nesciunt nam vel
+                <div class="aboutMe"><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nesciunt nam vel
                     expedita rerum doloribus error suscipit, veritatis at voluptatibus?
-                    <br>Lorem, ipsumdolor.<a href="">Link</a></br>
+                    <br>Lorem, ipsumdolor.<a href="">Link</a></br></span>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <footer>
         <h4>Lorem ipsum dolor sit.</h4>
     </footer>
 </body>
-
 </html>
