--- a/1-formularz-html5/index.html
+++ b/1-formularz-html5/index.html
@@ -10,30 +10,33 @@
 <body>
     <div id="formular">
     <form action="https://formspree.io/f/mvoyknng" method="POST" class="form">
-        <label for="name"><span class="subtitle">Imię</span></label><br>
-        <input id="text" class="name" placeholder="Imię" required><br>
-        <label for="surname"><span class="subtitle">Nazwisko</span></label><br>
-        <input id="text" class="surname" placeholder="Nazwisko" required><br>
-        <label for="email"><span class="subtitle">E-mail</span></label><br>
-        <input type="email" class="email" placeholder="email" required><br>
 
-        <label for="phone"><span class="subtitle">Telefon</span></label><br/>
-        <input type="tel" class="phone" placeholder="123654789" name="phone" required><br><br>
+        <label for="name">Imię</label><br>
+        <input type="text" id="name" name="name" placeholder="Imię" required><br>
 
-        <span class="subtitle">Wybierz miasto</span><br>
-        <select name="city"> 
+        <label for="surname">Nazwisko</label><br>
+        <input type="text" id="surname" name="surname" placeholder="Nazwisko" required><br>
+
+        <label for="email">E-mail</label><br>
+        <input type="email" id="email" name="email" placeholder="email" required><br>
+
+        <label for="phone">Telefon</label><br/>
+        <input type="tel" id="phone" name="phone" placeholder="123654789" name="phone" required><br><br>
+
+        <label for="city">Wybierz miasto</label><br>
+        <select name="city" id="city"> 
             <option value="krk">Kraków</option>
             <option value="ww">Warszawa</option>
             <option value="br">Berlin</option>
             <option value="ld">Londyn</option>
         </select><br><br>
 
-        <span class="subtitle">Wybierz płeć</span><br>
         
-        <input type= "radio" name="gender">Mężczyzna
-        <input type= "radio" name="gender">Kobieta<br><br>
+        <label for="gender">Wybierz płeć</label><br>
+        <input type= "radio" name="gender" id="gender">Mężczyzna<br>
+        <input type= "radio" name="gender" id="gender">Kobieta<br><br>
 
-        <label><input type="checkbox" name="agreement" required><span class="subtitle">Wyrażam zgodę na przetwarzanie danych</span></label><br><br>
+        <label for="checkbox"><input type="checkbox" id="checkbox" required>Wyrażam zgodę na przetwarzanie danych</label><br><br>
 
         <textarea maxlength="250" name="message" placeholder="dodatkowa wiadomość" class="inputMessage"></textarea><br><br>
 
