--- a/1-formularz-html5/index.html
+++ b/1-formularz-html5/index.html
@@ -21,7 +21,7 @@
         <input type="email" id="email" name="email" placeholder="email" required><br>
 
         <label for="phone">Telefon</label><br/>
-        <input type="tel" id="phone" name="phone" placeholder="123654789" name="phone" required><br><br>
+        <input type="tel" id="phone" placeholder="123654789" name="phone" required><br><br>
 
         <label for="city">Wybierz miasto</label><br>
         <select name="city" id="city"> 
