--- a/2-struktura-strony-html.png/index.html
+++ b/2-struktura-strony-html.png/index.html
@@ -8,38 +8,44 @@
     <title>Document</title>
 </head>
 <body>
-    <navbar id="navbar">
-        <div id="navbar">
-            <span>Home</span>
-            <span>O mnie</span>
-            <span>Kontakt</span>
-        </div>
+    <navbar>
+        <ul>
+            <ol>
+                <span>Home</span>
+                <span>O mnie</span>
+                <span>Kontakt</span>
+            </ol>
+        </ul>
     </navbar>
     <header id="header">
         <aside></aside>
         <h1>Główny tytuł strony</h1>
-        <div class="mainArticle"><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, voluptatum.</span>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, voluptatum.</p>
         </div>
     </header>
     <section id="section">
         <div id="article">
             <h3>O mnie</h3>
-            <div class="description"><span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rem voluptatum earum
-                ut, natus et eos. Reprehenderit excepturi totam deserunt.</span></div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rem voluptatum
+                earum
+                ut, natus et eos. Reprehenderit excepturi totam deserunt.</p>
         </div>
         <div id="article">
             <div id="contact">
                 <h3>Kontakt</h3>
-                <div class="description"><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quas. Quam porro
-                    tempora fuga deserunt id architecto vero autem eligendi.</span></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quas.
+                    Quam porro
+                    tempora fuga deserunt id architecto vero autem eligendi.</p>
             </div>
             <div id="article">
                 <h4>Tu mnie znajdziesz</h4>
-                <div class="aboutMe"><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nesciunt nam vel
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nesciunt nam
+                    vel
                     expedita rerum doloribus error suscipit, veritatis at voluptatibus?
-                    <br>Lorem, ipsumdolor.<a href="">Link</a></br></span>
-                </div>
+                    <br>Lorem, ipsumdolor.<a href="">Link</a>
+                </p>
             </div>
+        </div>
         </div>
     </section>
     <footer>
