--- a/2-struktura-strony-html.png/index.html
+++ b/2-struktura-strony-html.png/index.html
@@ -10,11 +10,9 @@
 <body>
     <navbar>
         <ul>
-            <ol>
-                <span>Home</span>
-                <span>O mnie</span>
-                <span>Kontakt</span>
-            </ol>
+            <li>Home</li>
+            <li>O mnie</li>
+            <li>Kontakt</li>
         </ul>
     </navbar>
     <header id="header">
