--- a/1-formularz-html5/index.html
+++ b/1-formularz-html5/index.html
@@ -33,8 +33,10 @@
 
         
         <label for="gender">Wybierz płeć</label><br>
-        <input type= "radio" name="gender" id="gender">Mężczyzna<br>
-        <input type= "radio" name="gender" id="gender">Kobieta<br><br>
+        <label for="man">Wybierz płeć</label><br>
+        <label for="woman">Wybierz płeć</label><br>
+        <input type= "radio" name="gender" id="man">Mężczyzna<br>
+        <input type= "radio" name="gender" id="woman">Kobieta<br><br>
 
         <label for="checkbox"><input type="checkbox" id="checkbox" required>Wyrażam zgodę na przetwarzanie danych</label><br><br>
 
