--- a/1-formularz-html5/index.html
+++ b/1-formularz-html5/index.html
@@ -35,8 +35,8 @@
         <label for="gender">Wybierz płeć</label><br>
         <label for="man">Wybierz płeć</label><br>
         <label for="woman">Wybierz płeć</label><br>
-        <input type= "radio" name="gender" id="man">Mężczyzna<br>
-        <input type= "radio" name="gender" id="woman">Kobieta<br><br>
+        <input type= "radio" name="man" id="man">Mężczyzna<br>
+        <input type= "radio" name="woman" id="woman">Kobieta<br><br>
 
         <label for="checkbox"><input type="checkbox" id="checkbox" required>Wyrażam zgodę na przetwarzanie danych</label><br><br>
 
