--- a/1-formularz-html5/index.html
+++ b/1-formularz-html5/index.html
@@ -32,11 +32,11 @@
         </select><br><br>
 
         
-        <label for="gender">Wybierz płeć</label><br>
-        <label for="man">Wybierz płeć</label><br>
-        <label for="woman">Wybierz płeć</label><br>
-        <input type= "radio" name="man" id="man">Mężczyzna<br>
-        <input type= "radio" name="woman" id="woman">Kobieta<br><br>
+        <span class="gender">Wybierz płeć</span><br>
+        <input type= "radio" name="gender" id="man">
+        <label for="man">Mężczyzna</label>
+        <input type= "radio" name="gender" id="woman">
+        <label for="woman">Kobieta</label><br><br>
 
         <label for="checkbox"><input type="checkbox" id="checkbox" required>Wyrażam zgodę na przetwarzanie danych</label><br><br>
 
