--- a/2-struktura-strony-html.png/index.html
+++ b/2-struktura-strony-html.png/index.html
@@ -8,13 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <navbar>
+    <nav>
         <ul>
             <li>Home</li>
             <li>O mnie</li>
             <li>Kontakt</li>
         </ul>
-    </navbar>
+    </nav>
     <header id="header">
         <aside></aside>
         <h1>Główny tytuł strony</h1>
@@ -22,20 +22,20 @@
         </div>
     </header>
     <section id="section">
-        <div id="article">
+        <div class="article">
             <h3>O mnie</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui rem voluptatum
                 earum
                 ut, natus et eos. Reprehenderit excepturi totam deserunt.</p>
         </div>
         <div id="article">
-            <div id="contact">
+            <div class="article">
                 <h3>Kontakt</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quas.
                     Quam porro
                     tempora fuga deserunt id architecto vero autem eligendi.</p>
             </div>
-            <div id="article">
+            <div class="article">
                 <h4>Tu mnie znajdziesz</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nesciunt nam
                     vel
@@ -43,7 +43,6 @@
                     <br>Lorem, ipsumdolor.<a href="">Link</a>
                 </p>
             </div>
-        </div>
         </div>
     </section>
     <footer>
