--- a/cssZadania/1-stylowanie-formularza/index.html
+++ b/cssZadania/1-stylowanie-formularza/index.html
@@ -9,9 +9,8 @@
 
 <body>
    
-    <!-- Zadanie domowe zrob z wykorzystaniem serwisu https://formspree.io -->
     
-    <form action="https://formspree.io/l.badocha@arena108.pl" method="POST">
+    <form action="https://formspree.io/f/myyvwoqn" method="POST">
         <label for="name">Imię:</label>
         <input type="text" name="name" id="name">
 
